style: nettoyage du périmètre et isolation du module Auteurs/Genres